sdk/crates/bitdo_tui/src/snapshots/bitdo_tui__tests__snapshot_dashboard_80x24.snap
---
source: crates/bitdo_tui/src/tests.rs
assertion_line: 530
expression: rendered
---
╭Session───────────────────────────────────────────────────────────────────────╮
│OpenBitDo  Dashboard  •  4 devices  •  reports fail-only  •  safe             │
╰──────────────────────────────────────────────────────────────────────────────╯
╭Search  filter────────────────╮╭Device  supported─────╮╭Actions  Enter/click──╮
│Search  active                ││Ultimate2  2dc8:5209  ││› Diagnose  •  run saf│
╰──────────────────────────────╯│Support: Supported  • ││  Refresh  •  scan USB│
╭Controllers  grouped──────────╮│Protocol: Standard64  ││  Recommended Update  │
│Supported now (1)             ││Evidence: Confirmed   ││  Edit Mapping  •  map│
│› 2dc8:5209 Ultimate2         ││                      ││  Write Probe  •  Only│
│supported • standard64 • confi││Support Scorecard     ││  Settings  •  report │
│Read-only candidates (2)      ││• 100% complete  •  pr││  Quit  •  close OpenB│
│  2dc8:901a Candidate         ││                      │╰──────────────────────╯
│read-only • unknown • untested││Works Now             │╭Activity  events──────╮
│  2dc8:6009 Ultimate          ││• safe diagnostics and││                      │
│read-only • standard64 • infer││• device identificatio││                      │
│Detect-only (1)               ││• firmware updates    ││                      │
│  2dc8:2056 Detect Only       ││• profile read and wri││                      │
│detect-only • unknown • untest││• mode switching      ││                      │
│                              ││• JP108 dedicated mapp││                      │
╰──────────────────────────────╯╰──────────────────────╯╰──────────────────────╯
╭Status────────────────────────────────────────────────────────────────────────╮
│Ready                                                                         │
│Ultimate2  •  click a device or action • arrows, Enter, Esc, and q still work │
╰──────────────────────────────────────────────────────────────────────────────╯
