sdk/crates/bitdo_tui/src/snapshots/bitdo_tui__tests__snapshot_diagnostics_screen_100x30.snap
---
source: crates/bitdo_tui/src/tests.rs
expression: rendered
---
╭Session───────────────────────────────────────────────────────────────────────────────────────────╮
│OpenBitDo  Diagnostics  •  3/5 passed  •  reports fail-only  •  safe                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭Diagnostics  summary──────────────────────────────────────────────────────────────────────────────╮
│3/5 passed  •  2 issues  •  1 attention                                                           │
│Confirmed 2/3  •  Experimental 1/2  •  Blocked: none for confirmed paths                          │
│Tier: supported  •  Family: Standard64  •  Transport: ready                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭Filter  All──╮╭Filter  Issu╮╭Filter  Exper╮╭Selected Check  detail────────────────────────────────╮
│All          ││Issues      ││Experimental ││GetPid  OK                                            │
╰─────────────╯╰────────────╯╰─────────────╯│Severity: Ok                                          │
╭Checks  click a row───────────────────────╮│Confidence: Confirmed                                 │
│› OK GetPid  detected pid 0x5…            ││Experimental: no                                      │
│  OK GetMode  mode 2                      ││Error code: none                                      │
│  OK GetSuperButton exp  ok               ││Response: Ok  •  attempts 1                           │
│  WARN ReadProfile exp  timeout while wa… ││IO: wrote 64B, read 64B                               │
│  ATTN Version  invalid response…         ││Validator: test:GetPid                                │
│                                          │╰──────────────────────────────────────────────────────╯
│                                          │╭Next Steps  guidance──────────────────────────────────╮
│                                          ││Action: Return to the dashboard for update or mapp…   │
│                                          ││Summary: Checks: 3/5 passed. Confirmed checks: 2/3…   │
│                                          ││Saved report: not yet saved in this screen            │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
╰──────────────────────────────────────────╯╰──────────────────────────────────────────────────────╯
╭Run Again──────────────────────╮╭Save Report────────────────────╮╭Back───────────────────────────╮
│Run Again                      ││Save Report                    ││Back                           │
│run the safe checks again      ││save a shareable support re…   ││return to dashboard            │
╰───────────────────────────────╯╰───────────────────────────────╯╰───────────────────────────────╯
