sdk/crates/bitdo_tui/src/snapshots/bitdo_tui__tests__snapshot_diagnostics_screen_80x24.snap
---
source: crates/bitdo_tui/src/tests.rs
expression: rendered
---
╭Session───────────────────────────────────────────────────────────────────────╮
│OpenBitDo  Diagnostics  •  3/5 passed  •  reports fail-only  •  safe          │
╰──────────────────────────────────────────────────────────────────────────────╯
╭Diagnostics  summary──────────────────────────────────────────────────────────╮
│3/5 passed  •  2 issues  •  1 attention                                       │
│Confirmed 2/3  •  Experimental 1/2  •  Blocked: none for confirmed paths      │
│Tier: supported  •  Family: Standard64  •  Transport: ready                   │
╰──────────────────────────────────────────────────────────────────────────────╯
╭Checks  tab cycles filter─────────────────────────────────────────────────────╮
│All 5  Issues 2  Exp 2                                                        │
│› OK GetPid  detected pid 0x5209                                              │
│  OK GetMode  mode 2                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
╭Selected Check  detail────────────────────────────────────────────────────────╮
│GetPid  OK                                                                    │
│Severity: Ok                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯
╭Next Steps  guidance──────────────────────────────────────────────────────────╮
│Action: Return to the dashboard for update or mapping if this device still…   │
╰──────────────────────────────────────────────────────────────────────────────╯
╭Run Again───────────────╮╭Save Report──────────────╮╭Back────────────────────╮
│Run Again               ││Save Report              ││Back                    │
│run the safe checks …   ││save a shareable supp…   ││return to dashboard     │
╰────────────────────────╯╰─────────────────────────╯╰────────────────────────╯
