sdk/crates/bitdo_tui/src/snapshots/bitdo_tui__tests__snapshot_diagnostics_screen_with_saved_report.snap
---
source: crates/bitdo_tui/src/tests.rs
expression: rendered
---
╭Session───────────────────────────────────────────────────────────────────────────────────────────╮
│OpenBitDo  Diagnostics  •  3/5 passed  •  reports fail-only  •  safe                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭Diagnostics  summary──────────────────────────────────────────────────────────────────────────────╮
│3/5 passed  •  2 issues  •  1 attention                                                           │
│Confirmed 2/3  •  Experimental 1/2  •  Blocked: none for confirmed paths                          │
│Tier: supported  •  Family: Standard64  •  Transport: ready                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭Filter  All──╮╭Filter  Issu╮╭Filter  Exper╮╭Selected Check  detail────────────────────────────────╮
│All          ││Issues      ││Experimental ││Version  ATTN                                         │
╰─────────────╯╰────────────╯╰─────────────╯│Severity: NeedsAttention                              │
╭Checks  click a row───────────────────────╮│Confidence: Confirmed                                 │
│  WARN ReadProfile exp  timeout while wa… ││Experimental: no                                      │
│› ATTN Version  invalid response…         ││Error code: InvalidResponse                           │
│                                          ││Response: Invalid  •  attempts 1                      │
│                                          ││IO: wrote 64B, read 8B                                │
│                                          ││Validator: test:Version                               │
│                                          │╰──────────────────────────────────────────────────────╯
│                                          │╭Next Steps  guidance──────────────────────────────────╮
│                                          ││Action: Return to the dashboard for update or mapp…   │
│                                          ││Summary: Checks: 3/5 passed. Confirmed checks: 2/3…   │
│                                          ││Saved report: /tmp/openbitdo-diag-report.toml         │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
╰──────────────────────────────────────────╯╰──────────────────────────────────────────────────────╯
╭Run Again──────────────────────╮╭Save Report────────────────────╮╭Back───────────────────────────╮
│Run Again                      ││Save Report                    ││Back                           │
│run the safe checks again      ││save a shareable support re…   ││return to dashboard            │
╰───────────────────────────────╯╰───────────────────────────────╯╰───────────────────────────────╯
